1999-04-22  Tom Tromey  <tromey@cygnus.com>

	* automake.in (generate_makefile): Define `subdir' variable.
	(handle_dist): Don't define `subdir'.

	* automake.in (handle_texinfo): Change numbering scheme for
	stamp-vti files, to avoid problems with DOS.
	From Michel de Ruiter.

	* automake.texi: Don't mention AM_FUNC_MKTIME.
	* aclocal.in (obsolete_macros): Mention AM_FUNC_MKTIME.
	* automake.in (scan_one_configure_file): Recognize
	AC_FUNC_MKTIME, not AM_FUNC_MKTIME.
	(obsolete_macros): Mention AM_FUNC_MKTIME.
	* m4/Makefile.am (m4data_DATA): Removed mktime.m4.
	* m4/mktime.m4: Removed.

1999-04-20  Tom Tromey  <tromey@cygnus.com>

	* automake.texi (Top level): Don't recommend substing SUBDIRS.

1999-04-20  Brian Ford <ford@vss.fsi.com>

	* scripts.am: Change else if's to elif.

1999-04-20  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (handle_lib_objects_cond): Only require the source
	of a LIBOBJ if it's not in BUILT_SOURCES.
	Reported by Erez Zadok.

1999-04-19  Tom Tromey  <tromey@cygnus.com>

	* automake.in: Treat `.class' files as Java source.
	(lang_java_finish): Handle `.class' files.

1999-04-18  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* m4/lispdir.m4: Match only `/(share|lib)/x?emacs/site-lisp/*$'.

	* m4/lispdir.m4: Do not override lispdir if it's already defined.
	Run some emacs-lisp to find out the site-lisp directory, but
	relocate it into prefix.

1999-04-17  Paul Eggert  <eggert@twinsun.com>

	* m4/mktime.m4 (bigtime_test, main): Move alarm from
	bigtime_test to main, since Solaris 7 (64-bit) mktime loops
	even outside of bigtime_test.  Use a time limit of 60 seconds
	for the whole test, not 10 seconds per iteration.

1999-04-17  Erez Zadok  <ezk@cs.columbia.edu>

	* automake.in: Create stamps for headers in appropriate
	directories, even if the input file lives in a different place.
	* remake-hdr.am: Likewise.

1999-04-16  Tom Tromey  <tromey@cygnus.com>

	From Brian Ford:
	* progs.am (install-@DIR@PROGRAMS, uninstall-@DIR@PROGRAMS):