@@ -1,3 +1,10 @@
+1999-04-24  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (generate_makefile): Define `subdir' after reading
+	.am file.
+	(read_main_am_file): Give programming error if variable defined
+	before invocation.
+
 1999-04-22  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (generate_makefile): Define `subdir' variable.
